# Langgraph

./: pyproject.toml  requirements.txt  verify_gemini.py
2-HumanAssistance/: humanintheloop.ipynb
3-Debugging/: agent.py  debugging.ipynb
3-Debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
4-Multimodel/: multimodal_gemini.ipynb  multimodal_gemini_explained.md  multimodalopenai.ipynb
Agents/: MULTIAGENT_EXPLAINED.md  langgraph.json  multiaiagent.ipynb  multiaiagent.py
Agents/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Basichatbot/: chatbot.ipynb
