[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "RE    ADME.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain",
    "langsmith",
    "python-dotenv",
    "langchain-groq",
    "langchain-tavily",
    "ipykernel>=7.1.0",
    "langchain-community>=0.3.31",
    "duckduckgo-search>=8.1.1",
    "langgraph-cli[inmem]>=0.4.12",
    "fitz>=0.0.1.dev2",
    "pymupdf>=1.27.1",
    "langchain-core>=0.3.83",
    "langchain-openai>=0.3.35",
    "transformers>=5.1.0",
    "torch>=2.10.0",
    "pillow>=12.1.1",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "faiss-cpu>=1.13.2",
]
